<resources>
  <string name="app_name">Muser</string>

  <string name="hello_world">Hello world!</string>
  <string name="action_settings">Settings</string>
  <string name="trap">trap</string>
  <string name="chillmusic">chillmusic</string>
  <string name="futurebass">futurebass</string>
  <string name="play">M11,10 L18,13.74 18,22.28 11,26 M18,13.74 L26,18 26,18 18,22.28</string>
  <string name="pause">M11,10 L17,10 17,26 11,26 M20,10 L26,10 26,26 20,26</string>
  <string name="previous">Previous</string>
  <string name="next">Next</string>
  <string name="electronicmusic">electronicmusic</string>
  <string name="mashups">mashups</string>
  <string name="futurebeats">futurebeats</string>
  <string name="hiphopheads">hiphopheads</string>

  <!-- Action items -->
  <string name="play_from_here">Play from here</string>
  <string name="open_on_soundcloud">Open on Soundcloud</string>
  <string name="open_on_reddit">Open on Reddit</string>
  <string name="share">Share</string>
</resources>
