<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

  <group android:checkableBehavior="single">
    <item
        android:id="@+id/drawer_trap"
        android:checked="true"
        android:icon="@drawable/fireemoji"
        android:title="@string/trap"
    />
    <item
        android:id="@+id/drawer_futurebeats"
        android:checked="false"
        android:icon="@drawable/clockemoji"
        android:title="@string/futurebeats"
    />
    <item
        android:id="@+id/drawer_electronicmusic"
        android:checked="false"
        android:icon="@drawable/headphonesemoji"
        android:title="@string/electronicmusic"
    />
    <item
        android:id="@+id/drawer_hiphopheads"
        android:checked="false"
        android:icon="@drawable/illuminati_triangle"
        android:title="@string/hiphopheads"
    />
    <item
        android:id="@+id/drawer_chillmusic"
        android:checked="false"
        android:icon="@drawable/dropletemoji"
        android:title="@string/chillmusic"
    />
    <item
        android:id="@+id/drawer_futurebass"
        android:checked="false"
        android:icon="@drawable/fishemoji"
        android:title="@string/futurebass"
    />
    <item
        android:id="@+id/drawer_mashups"
        android:checked="false"
        android:icon="@drawable/fingerupemoji"
        android:title="@string/mashups"
    />
  </group>

</menu>